--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "watch-files": "nodemon build/bundle"
   },
   "dependencies": {
+    "express": "^4.16.3",
     "webpack": "^4.19.1"
   },
   "devDependencies": {
     "@babel/core": "^7.1.0",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-typescript": "^7.1.0",
+    "@types/express": "^4.16.0",
     "babel-loader": "^8.0.2",
     "concurrently": "^4.0.1",
     "nodemon": "^1.18.4",
