--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "concurrently 'npm:watch-*'",
-    "watch-ts": "webpack",
+    "watch-ts": "webpack --display-error-details",
     "watch-files": "nodemon build/bundle"
   },
   "dependencies": {
