--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
     container_name: power_node
     restart: always
     build: .
+    volumes:
+      - ./src:/usr/src/app
     ports:
       - '3000:3000'
     links:
@@ -11,5 +13,7 @@ services:
   mongo:
     container_name: mongo
     image: mongo
+    volumes:
+      - ./data:/data/db
     ports:
       - '27017:27017'
