--- a/package.json
+++ b/package.json
@@ -13,17 +13,19 @@
   },
   "dependencies": {
     "express": "^4.16.4",
-    "webpack": "^4.27.1"
+    "mongoose": "^5.4.0",
+    "webpack": "^4.28.2"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
     "@babel/preset-env": "^7.2.0",
     "@babel/preset-typescript": "^7.1.0",
     "@types/express": "^4.16.0",
+    "@types/mongoose": "^5.3.5",
     "babel-loader": "^8.0.4",
     "concurrently": "^4.1.0",
     "nodemon": "^1.18.9",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.10"
+    "webpack-dev-server": "^3.1.14"
   }
 }
