--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
   mongo:
     container_name: mongo
     image: mongo
-    volumes:
-      - ./data:/data/db
+  #  volumes:
+  #    - ./data:/data/db
     ports:
       - '27017:27017'
