--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "watch-files": "nodemon build/bundle"
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "mongoose": "^5.4.0",
+    "socket.io": "^2.2.0",
     "webpack": "^4.28.2"
   },
   "devDependencies": {
@@ -22,6 +24,8 @@
     "@babel/preset-typescript": "^7.1.0",
     "@types/express": "^4.16.0",
     "@types/mongoose": "^5.3.5",
+    "@types/node": "^10.12.18",
+    "@types/socket.io": "^2.1.2",
     "babel-loader": "^8.0.4",
     "concurrently": "^4.1.0",
     "nodemon": "^1.18.9",
