--- a/package.json
+++ b/package.json
@@ -12,24 +12,20 @@
     "watch-files": "nodemon build/bundle"
   },
   "dependencies": {
-    "body-parser": "^1.18.3",
-    "express": "^4.16.4",
-    "mongoose": "^5.4.0",
-    "socket.io": "^2.2.0",
-    "webpack": "^4.28.2"
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.2.2",
-    "@babel/preset-env": "^7.2.0",
-    "@babel/preset-typescript": "^7.1.0",
+    "@swc/core": "^1.1.23",
     "@types/express": "^4.16.0",
-    "@types/mongoose": "^5.3.5",
     "@types/node": "^10.12.18",
-    "@types/socket.io": "^2.1.2",
-    "babel-loader": "^8.0.4",
-    "concurrently": "^4.1.0",
-    "nodemon": "^1.18.9",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.14"
+    "@types/webpack": "^4.41.6",
+    "@types/webpack-dev-server": "^3.10.0",
+    "concurrently": "^5.1.0",
+    "nodemon": "^2.0.2",
+    "swc-loader": "^0.1.8",
+    "webpack": "^4.41.6",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
   }
 }
