--- a/package.json
+++ b/package.json
@@ -8,16 +8,18 @@
   "license": "MIT",
   "scripts": {
     "dev": "concurrently 'npm:watch-*'",
-    "watch-ts": "webpack --display-error-details",
+    "watch-ts": "webpack --config config/webpack.dev.js --display-error-details",
     "watch-files": "nodemon build/bundle"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^5.9.1",
+    "playwright": "^0.11.1"
   },
   "devDependencies": {
     "@swc/core": "^1.1.23",
-    "@types/express": "^4.16.0",
+    "@types/express": "^4.17.2",
     "@types/node": "^10.12.18",
     "@types/webpack": "^4.41.6",
     "@types/webpack-dev-server": "^3.10.0",
